[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Enemies/Beholder/beholder.png" type="Texture" id=2]
[ext_resource path="res://scenes/Enemies/Beholder/Beholder.gd" type="Script" id=3]
[ext_resource path="res://resources/shaders/enemy_hurt.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/color = Color( 0.745098, 0.14902, 0.2, 1 )
shader_param/active = false

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0, 4, 5, 6, 5, 4, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.0
height = 8.0

[node name="Beholder" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
material = SubResource( 1 )
position = Vector2( 0, -24 )
texture = ExtResource( 2 )
hframes = 7
frame = 3

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "close"
anims/close = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="Hurtbox" parent="." index="2"]
collision_mask = 0
health = 400

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -35 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Hitbox" parent="." index="3"]
collision_mask = 0

[node name="BulletPosition" parent="." index="5"]
position = Vector2( 0, -36 )

[node name="VisibilityNotifier2D" parent="." index="6"]
position = Vector2( -2.38419e-07, -24 )
scale = Vector2( 1.6, 2.4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="7"]
polygon = PoolVector2Array( -14, -40, -10, -44, -4, -46, 4, -46, 10, -44, 14, -40, 14, -32, 9, -24, 16, -8, 16, 0, -16, 0, -16, -8, -9, -24, -14, -32 )

[node name="AwakeTimer" type="Timer" parent="." index="8"]
one_shot = true

[node name="SleepTimer" type="Timer" parent="." index="9"]
one_shot = true
[connection signal="timeout" from="AwakeTimer" to="." method="_on_AwakeTimer_timeout"]
[connection signal="timeout" from="SleepTimer" to="." method="_on_SleepTimer_timeout"]
